# learn

cpp-concurrency/: CMakeLists.txt
cpp-concurrency/include/: DetachedThread.hpp  ParallelAlgorithms_v2.hpp  ParallelAlgorithms_v3.hpp  SafeQueue.hpp  SafeStack.hpp  ScopedThread.hpp  ThreadGuard.hpp  ThreadPool.hpp  Utils.hpp
cpp-concurrency/test/: CMakeLists.txt  TestParallelAlgorithms_v2.cpp  TestParallelAlgorithms_v3.cpp  TestSafeQueue.cpp  TestSafeStack.cpp  TestScopedThread.cpp  TestThreadGuard.cpp
design-patterns/: CMakeLists.txt  README.md
design-patterns/patterns/: CMakeLists.txt
design-patterns/patterns/bridge/: CMakeLists.txt  Summary.md
design-patterns/patterns/bridge/include/: Pimpl.hpp
design-patterns/patterns/bridge/src/: Pimpl.cpp
design-patterns/patterns/builder/: CMakeLists.txt
design-patterns/patterns/builder/include/: Builder.hpp  CodeBuilder.hpp
design-patterns/patterns/builder/src/: Builder.cpp  CodeBuilder.cpp
design-patterns/patterns/builder/test/: CMakeLists.txt  CodeTestBuilder.cpp  TestBuilder.cpp
design-patterns/patterns/factory/: CMakeLists.txt
design-patterns/patterns/factory/include/: DrinkFactory.hpp  Factory.hpp  FactoryMethod.hpp  HotDrink.hpp  HotDrinkFactory.hpp  InnerFactory.hpp
design-patterns/patterns/factory/src/: Factory.cpp  FactoryMethod.cpp  InnerFactory.cpp
design-patterns/patterns/factory/test/: CMakeLists.txt  TestAbstractFactory.cpp  TestFactory.cpp  TestFactoryMethod.cpp  TestInnerFactory.cpp
design-patterns/patterns/iterator/: custom_copy_iterator.hpp  iterators.hpp  iterators_test.cpp
design-patterns/patterns/observer/: CMakeLists.txt
design-patterns/patterns/observer/include/: Observable.hpp  Observer.hpp
design-patterns/patterns/observer/test/: CMakeLists.txt  TestObserver.cpp
design-patterns/patterns/prototype/: CMakeLists.txt
design-patterns/patterns/prototype/include/: Prototype.hpp
design-patterns/patterns/prototype/test/: CMakeLists.txt  TestPrototype.cpp
design-patterns/patterns/singleton/: CMakeLists.txt
design-patterns/patterns/singleton/include/: Singleton.hpp  Singleton_old.hpp
design-patterns/patterns/singleton/src/: Singleton_old.cpp
design-patterns/patterns/singleton/test/: CMakeLists.txt  TestSingleton.cpp  TestSingletonNew.cpp
design-patterns/patterns/strategy/: CMakeLists.txt
design-patterns/patterns/strategy/include/: Strategy.hpp
design-patterns/patterns/strategy/src/: Strategy.cpp
design-patterns/patterns/strategy/test/: CMakeLists.txt  TestStrategy.cpp
design-patterns/solid/: 1_SingleResponsability.cpp  3_LiskovSubstitution.cpp  4_InterfaceSegregation.cpp  5_DependancyInversion.cpp  CMakeLists.txt  OpenClosed.cpp
opengl/modern/: vertexShader.cpp
qt/gui/: CMakeLists.txt  README.md  build.sh
qt/gui/cmake/: UseQt5.cmake
qt/gui/src/: sheets.cpp
qt/gui/src/gui/dialog/: FindDialog.cpp  FindDialog.hpp  GotoDialog.cpp  GotoDialog.hpp  SortDialog.cpp  SortDialog.hpp
vulkan-api/: CMakeLists.txt
vulkan-api/conan/: CMakeLists.txt  conanfile.txt
vulkan-api/doc/: extensions.md  validation_layers.md  vulkan_devices.md  vulkan_instances.md
vulkan-api/src/: allocator.h  lesson3-compat.cpp  lesson5-windows-instances-devices.cpp  logger.cpp  logger.h  memory_mgmt.cpp  memory_mgmt.h  scope_guard.h  utilities.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_status.h
