## Executables for SOLID
## Single responsability
add_executable(SingleResponsability 1_SingleResponsability.cpp)

## Open-Closed
add_executable(OpenClosed 2_OpenClosed.cpp)

## Liskov substitution principle
add_executable(LiskovSubstiturion 3_LiskovSubstitution.cpp)

## Open-Closed principles
add_executable(InterfaceSegregation 4_InterfaceSegregation.cpp)

## Open-Closed principles
add_executable(DependancyInversion 5_DependancyInversion.cpp)
